fix: set correct defaults for notification config (#15618)